# CorForge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
assets/prefabs/: BouncyBall.json  ReflectiveBall.json
assets/scenes/: CoolPoolScene.json  DonutDemo.json  FlockingDemo.json  GlassScene.json  MirrorRoom.json  ParticleDemo.json  RainDemo.json  ShowcaseScene.json  ShowcaseScene3.json  TerrainDemo.json
memory/: MEMORY.md  corforge-build-env.md  corforge-optimization.md
scripts/: build.ps1  convert-all.bat  convert-model.bat
shaders/: basic.frag  basic.vert  cross.frag  cube_capture.vert  equirect.frag  outline.vert  particle.frag  particle.vert  post.vert  post_blur.frag  post_bright.frag  post_composite.frag  post_dof.frag  post_fxaa.frag  post_ssao.frag  post_ssr.frag  shadow_cube.frag  shadow_cube.vert  shadow_depth.frag  shadow_depth.vert  sky_capture.frag  skybox.frag  skybox.vert  sphere.frag  terrain.frag  terrain.vert  water.frag  water.vert
src/: main.cpp
src/components/: BoidComponent.h  BuoyancyComponent.cpp  BuoyancyComponent.h  CameraComponent.cpp  CameraComponent.h  ClothComponent.cpp  ClothComponent.h  ColliderComponent.cpp  ColliderComponent.h  FlockComponent.cpp  FlockComponent.h  FlyCameraController.cpp  FlyCameraController.h  LightComponent.cpp  LightComponent.h  MaterialComponent.cpp  MaterialComponent.h  MoverComponent.cpp  MoverComponent.h  ParticleComponent.cpp  ParticleComponent.h  PhysicsMoverComponent.cpp  PhysicsMoverComponent.h  RendererComponent.cpp  RendererComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  SkyComponent.cpp  SkyComponent.h  TerrainComponent.cpp  TerrainComponent.h  TerrainPropComponent.h  WaterComponent.cpp  WaterComponent.h
src/core/: AssetManager.cpp  AssetManager.h  Component.h  ComponentRegistry.cpp  ComponentRegistry.h  Object.cpp  Object.h  ObjectsManager.cpp  ObjectsManager.h  PhysicsManager.cpp  PhysicsManager.h  RendererManager.cpp  RendererManager.h  SceneSerializer.cpp  SceneSerializer.h  Transform.h  WindowManager.cpp  WindowManager.h
src/gfx/: Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  gltf_impl.cpp  stb_image_impl.cpp
src/ui/: DebugUI.cpp  DebugUI.h  UIManager.cpp  UIManager.h
tools/: gen_donut_scene.py  gen_particles_demo.py  modelconvert.cpp
